# python-template

./: README.md  dev.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: publish.yml
ci/summary/: main.sh
ci/tagger/: main.sh
scripts/: setup.sh
